# env-monitor-system

./: README.md
myenvapp-harmonyos/AppScope/: app.json5
myenvapp-harmonyos/AppScope/resources/base/element/: string.json
myenvapp-harmonyos/entry/src/main/: module.json5
myenvapp-harmonyos/entry/src/main/ets/pages/: Index.ets
myenvapp-harmonyos/entry/src/main/resources/base/profile/: network_config.json
socket-server-java/SocketServer/src/: dbconn.properties
socket-server-java/SocketServer/src/com/dao/: EnvDao.java
socket-server-java/SocketServer/src/com/db/: DBConnection.java  DBHelper.java
socket-server-java/SocketServer/src/com/entity/: Env.java
socket-server-java/SocketServer/src/com/server/: MainServer.java
socket-server-java/SocketServer/src/com/service/: EnvService.java
socket-server-java/prjSpringbootEnvCheck/: HELP.md  pom.xml
socket-server-java/prjSpringbootEnvCheck/src/main/java/com/xiyou/: PrjSpringbootEnvCheckApplication.java
socket-server-java/prjSpringbootEnvCheck/src/main/java/com/xiyou/controller/: EnvController.java
socket-server-java/prjSpringbootEnvCheck/src/main/java/com/xiyou/dao/: EnvDao.java
socket-server-java/prjSpringbootEnvCheck/src/main/java/com/xiyou/entity/: Env.java
socket-server-java/prjSpringbootEnvCheck/src/main/java/com/xiyou/service/: EnvService.java
socket-server-java/prjSpringbootEnvCheck/src/main/java/com/xiyou/service/impl/: EnvServiceImpl.java
socket-server-java/prjSpringbootEnvCheck/src/main/resources/: application.properties
socket-server-java/prjSpringbootEnvCheck/src/main/resources/mapper/: EnvDao.xml
socket-server-java/prjSpringbootEnvCheck/src/main/resources/static/: index.html
socket-server-java/prjSpringbootEnvCheck/src/test/java/com/xiyou/: PrjSpringbootEnvCheckApplicationTests.java
youdianjike/code1/: BUILD.gn  hellodemo.c
youdianjike/code2/: BUILD.gn  leddemo.c
youdianjike/code3/: BUILD.gn  aht20demo.c  envdemo.c  mq2demo.c  oleddemo.c
youdianjike/code4/: BUILD.gn  envclientdemo.c  envclientdemo.h  main.c  tcpclientdemo.c  tcpclientdemo.h  wifi_app.c  wifi_utils.c  wifi_utils.h
环境依赖/: gn.1523.tar  llvm-linux-9.0.0-36191.tar
